# Trabajo-BigData-IBDN

./: .dockerignore  .env.example  .gcloudignore  .gitignore  README.md  README2.md  cli.py  config.py  docker-compose.cloud.yaml  docker-compose.yaml  keep-port-forward.sh  orchestrator.py  pyproject.toml  real-README.md  requirements.txt  setup.py  setup.sh  start.py
cloud/: cli.py  cloud-init.yaml  config.py  docker_ops.py  gcp_ops.py  gcp_orchestrator.py  kafka_ops.py  orchestrator.py  pipeline.py  pipeline_gcloud.py  spark_ops.py
cloud/k8s/: airflow.yaml  cassandra.yaml  configmap.yaml  configmaps.yaml  flask.yaml  kafka.yaml  minio.yaml  mlflow.yaml  namespace.yaml  rbac.yaml  spark-manager.yaml  spark-worker.yaml
dags/: train_flight_delay_model.py  train_random_forest.py
docker/: airflow_init_user.py  dockerfile.airflow  dockerfile.python  dockerfile.spark  dockerfile.spark-base  requirements.txt  spark-defaults.conf
docs/: DOCKER.md  GCLOUD.md  GKE.md
flight_prediction/: build.sbt
pipeline/: __init__.py  docker_ops.py  gcloud.py  gcp_ops.py  gke.py  kafka_ops.py  local.py  spark_ops.py
scripts/: create_bucket.py  download_data.py  import_distances.py  init_cassandra.py  register_original.py  train.py
scripts/legacy/: train.py
scripts/web/: config.py  predict_flask.py  predict_utils.py
spark-jobs/: build.sbt
utils/: __init__.py  config.py  logs.py  minio.py  network.py  shell.py  spark.py
web/: app.py  kafka_handler.py  utils.py
web/routes/: gke.py  logs.py  models.py  prediction.py
web/static/: styles.css
web/templates/: index.html  (+1 more)
(+9 files in other folders)
